--- a/css/search.css
+++ b/css/search.css
@@ -18,9 +18,8 @@
     position: relative;
     border-radius: 10px;
     left: 5px;
-    background: rgba(255,255,255,0.8);
+    background: rgba(200,200,200,0.6);
     transition: all 0.2s ease-in;
-
 
 }
 
@@ -34,10 +33,22 @@
     display: block;
 }
 
+.container:focus-within .bg{
+    filter: blur(100px);
+}
+.container:focus-within #clock{
+    top: 10%;
+    transition: all 0.2s ease-in-out;
+}
+.container:focus-within .search-wrapper{
+    top: 25%;
+    transition: all 0.2s ease-in-out;
+}
+
 .search-input {
     width: 100%;
     height: 30px;
-    padding:0px 70px 0 45%;
+    padding:0px 70px 0 0;
     border: none;
     outline:none;
 
@@ -48,10 +59,14 @@
     left:0px;
     background: transparent;
     cursor: pointer;
-    color: rgba(255,255,255,0.8);
-
+    color: rgba(255,255,255,0.7);
 }
-
+.search-input::-ms-input-placeholder{
+    text-align: center;
+}
+input::-webkit-input-placeholder{
+    text-align: center;
+}
 .search-input:focus {
     padding:0px 70px 0 10px;
     top: 5px;
