--- a/css/search.css
+++ b/css/search.css
@@ -18,7 +18,7 @@
     position: relative;
     border-radius: 10px;
     left: 5px;
-    background: rgba(200,200,200,0.6);
+    background: rgba(255,255,255,0.7);
     transition: all 0.2s ease-in;
 
 }
@@ -118,7 +118,7 @@ input::-webkit-input-placeholder{
     .search-wrapper .input-holder {width:200px;}
 }
 
-@media screen and (min-width: 1000) {
+@media screen and (min-width: 1000px) {
     .search-wrapper {width:450px;}
 }
 
@@ -126,8 +126,8 @@ input::-webkit-input-placeholder{
     .search-wrapper {
         top: 33%;
     }
-}
 
+}
 
 ::-webkit-input-placeholder { /* WebKit browsers */
 
@@ -206,6 +206,7 @@ input::-webkit-input-placeholder{
 
 }
 
+
 #setting-container{
     position: absolute;
     top:105px;
@@ -219,4 +220,73 @@ input::-webkit-input-placeholder{
 
 #setting-container::before{
     filter: blur(20px)
+}
+
+/*function tab*/
+
+.container:focus-within .function-tab-container{
+    display: none;
+}
+.function-tab-container {
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    top: 60%;
+    display: block;
+    transition: all 0.2s ease-in-out;
+}
+.function-navigation {
+    height: 90px;
+    width: 864px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    /*background-color: rgba(0,0,0,0.5);*/
+
+}
+.link-item,.item-plus {
+    width: 108px;
+    height: 90px;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+    display: inline-block;
+}
+.item-plus:hover ,.link-item:hover{
+    background-color: rgba(255,255,255,0.4);
+}
+.link-item:hover .item-icon{
+    background-color: rgba(200,200,200,0);
+}
+
+.link-item:hover .item-desc p {
+    color: black;
+    transition: all 0.5s ease-in-out;
+}
+.item-icon{
+    height: 40px;
+    width: 40px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255,255,255,0.4);
+    border-radius: 4px;
+    transition: all 0.5s ease-in-out;
+}
+.item-icon img{
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 8px;
+    display: block;
+}
+
+.item-desc p{
+    color: white;
+    width: 84px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space: nowrap;
 }
