修复input事件, 增加快捷键提示

--- a/css/search.css
+++ b/css/search.css
@@ -124,6 +124,10 @@ input::-webkit-input-placeholder {
 
 }
 
+.search-link span{
+    float: right;
+    font-size: x-small;
+}
 
 @media screen and (max-width: 560px) {
     .search-wrapper, .input-holder {
