--- a/css/search.css
+++ b/css/search.css
@@ -138,12 +138,7 @@ input::-webkit-input-placeholder {
     font-size: x-small;
 }
 
-.search-mode{
-    display: block;
-}
-.focus-mode{
-    display: none;
-}
+
 
 .search-radius {
     
@@ -177,13 +172,15 @@ input::-webkit-input-placeholder {
     font-size: 14px;
     min-width: 32px;
     border: 2px solid transparent;
-    border-radius: 2px;
+    border-radius: 19px;
     width: 110px;
-    background: rgba(250, 250, 250, 0.3);
+    transition: all 0.s ease-in;
+    background: rgba(0, 0, 0, 0.3);
+
 }
 
 .search-radius button.active{
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(250, 250, 250, 0.3);
 }
 
 .search-radius button:hover{
@@ -500,4 +497,11 @@ input::-webkit-input-placeholder {
     background: #0078D4;
     margin-right: 4px;
 
+}
+
+.search-mode{
+    display: block;
+}
+.focus-mode{
+    display: none;
 }
