--- a/css/search.css
+++ b/css/search.css
@@ -42,6 +42,9 @@
     cursor: pointer;
     color: rgba(255, 255, 255, 0.7);
 }
+.search-input:focus{
+    width: 380px;
+}
 
 .search-input::-ms-input-placeholder {
     text-align: center;
@@ -60,7 +63,6 @@ input::-webkit-input-placeholder {
     margin: 10px;
     position: relative;
     float: right;
-    top: -30px;
     display: none;
     transition: all 0.2s ease-in;
 
